      BR 240301)
    * Improved the playlist synchronisation feature.
    * Make possible to get count tracks before the XSPF file is fully loaded.
    * Mark unplayble tracks in the playlist. Patch by Sandeep Raghuraman. (BR 263640)
    * Current track applet: show number of artists instead of genres. (BR 261077)

  BUGFIXES:
    * Don't crash with Qt debug builds when iPod is connected. (BR 279798)
    * Fixed crash on exit while collection scanner is running. (BR 261421)
    * Fixed collection browser tracks grouping after switching to Merged View. (BR 277015)
    * Prefer track artist to album artist in Albums applet fiter. (BR 266682)
    * Fixed the Metadata, CanGoPrevious, CanGoNext and CanSeek properties of the
      MPRIS2 interface
    * Fixed Wikipedia search field not accepting space character or cursor
      keys. (BR 266591)
    * Fixed SupportedMimeTypes method on the MPRIS2 D-Bus interface, so that it
      no longer appends duplicate entries on every call.
    * Do not use Album Artist as Artist for files without Artist metadata. (BR 281283)
    * Fixed crash on decodeing currupted media during MusicDNS search. (BR 284895)
    * Prevent crash on getting cover from MP4 files. Patch by Charles Reiss.
      (BR 283675)
    * Prevent several potential and one real media device crash. (BR 284838)
    * Fixed iPod album covers not displayed in collection browser. (BR 263268)
    * Do not crash when iPod is removed but some iPod tracks are still in
      playlist. (BR 245852)
    * Fixed several potential AmarokUrl related crashes.
    * Rework iPod identification so that it is more reliable (BR 263288)
    * iPhone 3G (and perhaps later models) should be correctly recognized by
      Amarok now. (BR 281738)
    * Automated Playlist Generator doesn't freeze anymore when it finishes.
      (BR 277865)
    * Use regular MusicBrainz search for tracks with MBID. (BR 280857)
    * Always use English AND/OR in Collection Filter even if translations are