@@ -50,6 +50,7 @@ Version 2.5.0-Beta 1
     * Current track applet: show number of artists instead of genres. (BR 261077)
 
   BUGFIXES:
+    * Fixed crash during MusicBrainz search. (BR 277475)
     * Don't crash with Qt debug builds when iPod is connected. (BR 279798)
     * Fixed crash on exit while collection scanner is running. (BR 261421)
     * Fixed collection browser tracks grouping after switching to Merged View. (BR 277015)
